# parallel_algorithms

./: .gitignore  CMakeLists.txt  README.md  for_each.cpp  for_each.hpp  parallel_algorithms.sln  sort.cpp  sort.hpp  thread_check.cpp  thread_check.hpp
for_each/: for_each.vcxproj  for_each.vcxproj.filters
sort/: sort.vcxproj  sort.vcxproj.filters
thread_check/: thread_check.vcxproj  thread_check.vcxproj.filters
